--- a/css/styles.css
+++ b/css/styles.css
@@ -28,6 +28,7 @@ body{
 h1{
     margin: 0;
     padding: 0;
+    margin-bottom: 20px;
     font-weight: 200;
     color:#189AB4;
     text-shadow:3px 3px #05445E;
