--- a/css/styles.css
+++ b/css/styles.css
@@ -27,7 +27,6 @@ body{
 h1{
     margin: 0;
     padding: 0;
-    margin-bottom: 20px;
     font-weight: 200;
     color:#189AB4;
     text-shadow:3px 3px #05445E;
@@ -93,6 +92,7 @@ p{
     width: 100%;
     text-align: center;
     background-color: #189AB4;
+    align-self: stretch;
 }
 .slidecontainer{
     width: 60%;
